# embedded_practice

./: CMakeLists.txt  main.cpp  readme.md
include/: FreeRTOSConfig.h  ISensor.hpp  MessageQueue.hpp  MockSensor.hpp  SensorData.hpp
src/: main.cpp
